Fixed some bugs, added some datepickers. Made it niiiiize!

--- a/client/src/my/sheeponthetable/gui/AddNewSheep.form
+++ b/client/src/my/sheeponthetable/gui/AddNewSheep.form
@@ -68,7 +68,7 @@
                               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                               <EmptySpace pref="22" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="txtBorn" max="32767" attributes="0"/>
+                          <Component id="dcSheepAddBorn" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
@@ -96,10 +96,12 @@
                           <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtBorn" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtNick" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtWeight" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="txtNick" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtWeight" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="dcSheepAddBorn" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -126,8 +128,6 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Add new sheep"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txtBorn">
     </Component>
     <Component class="javax.swing.JTextField" name="txtNick">
     </Component>
@@ -197,6 +197,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addSheepButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="dcSheepAddBorn">
+      <Properties>
+        <Property name="dateFormatString" type="java.lang.String" value="dd.MM.yyyy"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
