--- a/client/src/my/sheeponthetable/gui/SheepPanel.form
+++ b/client/src/my/sheeponthetable/gui/SheepPanel.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
@@ -207,7 +207,7 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jXSheepMap" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jXSheepMap" alignment="0" pref="920" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="lblFarmName" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -234,7 +234,7 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jScrollPane2" pref="32" max="32767" attributes="0"/>
                               </Group>
-                              <Component id="jScrollPane1" max="32767" attributes="0"/>
+                              <Component id="jScrollPane1" pref="892" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -334,10 +334,10 @@
                                           <Component id="lblSheepPulse" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Component id="lblSheepAlarm" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="44" max="32767" attributes="0"/>
                                   </Group>
-                                  <Component id="lblSheepPosition" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="lblSheepUpdate" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="lblSheepPosition" alignment="0" pref="185" max="32767" attributes="0"/>
+                                  <Component id="lblSheepUpdate" alignment="0" pref="185" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -622,10 +622,10 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane4" alignment="0" pref="311" max="32767" attributes="0"/>
+                          <Component id="jScrollPane4" alignment="0" pref="317" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="btnSheepEditSave" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="79" max="32767" attributes="0"/>
                               <Component id="btnSheepEditCancel" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -639,11 +639,11 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="txtSheepEditId" max="32767" attributes="0"/>
+                                  <Component id="txtSheepEditId" pref="185" max="32767" attributes="0"/>
                                   <Component id="txtSheepEditNickname" alignment="1" pref="185" max="32767" attributes="0"/>
                                   <Component id="txtSheepEditWeight" alignment="0" pref="185" max="32767" attributes="0"/>
-                                  <Component id="dcSheepEditBorn" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="dcSheepEditDead" max="32767" attributes="0"/>
+                                  <Component id="dcSheepEditBorn" alignment="0" pref="185" max="32767" attributes="0"/>
+                                  <Component id="dcSheepEditDead" pref="185" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
