--- a/client/src/my/sheeponthetable/gui/SheepPanel.form
+++ b/client/src/my/sheeponthetable/gui/SheepPanel.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
@@ -127,6 +127,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Remove Sheep"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuRemoveSheepClicked"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -200,13 +203,13 @@
                               <Component id="jLabelLastUpdate" pref="211" max="32767" attributes="0"/>
                           </Group>
                       </Group>
-                      <Component id="panelSheepEdit" alignment="0" pref="337" max="32767" attributes="0"/>
+                      <Component id="panelSheepEdit" alignment="0" pref="394" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                           <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="panelSheepInfo" alignment="0" pref="337" max="32767" attributes="0"/>
+                      <Component id="panelSheepInfo" alignment="0" pref="394" max="32767" attributes="0"/>
                       <Component id="jScrollPane2" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
@@ -230,7 +233,7 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jXSheepMap" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jXSheepMap" alignment="0" pref="994" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="lblFarmName" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -263,7 +266,7 @@
                                   <Component id="jScrollPane2" pref="77" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jScrollPane1" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane1" pref="924" max="32767" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -347,7 +350,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane3" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jScrollPane3" alignment="0" pref="370" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jLabel7" alignment="0" max="32767" attributes="0"/>
@@ -375,10 +378,10 @@
                                           <Component id="lblSheepPulse" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Component id="lblSheepAlarm" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="103" max="32767" attributes="0"/>
                                   </Group>
-                                  <Component id="lblSheepPosition" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="lblSheepUpdate" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="lblSheepPosition" alignment="0" pref="244" max="32767" attributes="0"/>
+                                  <Component id="lblSheepUpdate" alignment="0" pref="244" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -443,7 +446,7 @@
                           <Component id="jLabel17" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lblSheepAlarm" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="12" max="32767" attributes="0"/>
+                      <EmptySpace pref="14" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -666,10 +669,10 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane4" alignment="0" pref="317" max="32767" attributes="0"/>
+                          <Component id="jScrollPane4" alignment="0" pref="370" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="btnSheepEditSave" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="79" max="32767" attributes="0"/>
+                              <EmptySpace pref="132" max="32767" attributes="0"/>
                               <Component id="btnSheepEditCancel" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -683,11 +686,11 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="txtSheepEditId" pref="185" max="32767" attributes="0"/>
-                                  <Component id="txtSheepEditNickname" alignment="1" pref="185" max="32767" attributes="0"/>
-                                  <Component id="txtSheepEditWeight" alignment="0" pref="185" max="32767" attributes="0"/>
-                                  <Component id="dcSheepEditBorn" alignment="0" pref="185" max="32767" attributes="0"/>
-                                  <Component id="dcSheepEditDead" pref="185" max="32767" attributes="0"/>
+                                  <Component id="txtSheepEditId" pref="238" max="32767" attributes="0"/>
+                                  <Component id="txtSheepEditNickname" alignment="1" pref="238" max="32767" attributes="0"/>
+                                  <Component id="txtSheepEditWeight" alignment="0" pref="238" max="32767" attributes="0"/>
+                                  <Component id="dcSheepEditBorn" alignment="0" pref="238" max="32767" attributes="0"/>
+                                  <Component id="dcSheepEditDead" pref="238" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -732,7 +735,7 @@
                           <Component id="btnSheepEditSave" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnSheepEditCancel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="86" max="32767" attributes="0"/>
+                      <EmptySpace pref="43" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
