Best commit comment ever!

--- a/client/src/my/sheeponthetable/gui/FarmTools.form
+++ b/client/src/my/sheeponthetable/gui/FarmTools.form
@@ -207,26 +207,41 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Sheep killed"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userSettingsChanged"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="cbxEmailAlertHealth">
       <Properties>
         <Property name="text" type="java.lang.String" value="Health"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userSettingsChanged"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="cbxSMSAlertHealth">
       <Properties>
         <Property name="text" type="java.lang.String" value="Health"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userSettingsChanged"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="cbxSMSAlertStationary">
       <Properties>
         <Property name="text" type="java.lang.String" value="Stationary"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userSettingsChanged"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="cbxEmailAlertStationary">
       <Properties>
         <Property name="text" type="java.lang.String" value="Stationary"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userSettingsChanged"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
@@ -242,6 +257,9 @@
       <Properties>
         <Property name="name" type="java.lang.String" value="" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="setUserPermission"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblName">
       <Properties>
