Saving without doing changes will now show a messagedialog instead of doing nothing. Add/remove users buttons are now disabled by default if the user is not an Owner.

--- a/client/src/my/sheeponthetable/gui/FarmTools.form
+++ b/client/src/my/sheeponthetable/gui/FarmTools.form
@@ -279,6 +279,7 @@
     <Component class="javax.swing.JButton" name="addUserToFarmButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="+"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addUserToFarmButtonActionPerformed"/>
@@ -287,6 +288,7 @@
     <Component class="javax.swing.JButton" name="removeUserFromFarmButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="-"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeUserFromFarmButtonActionPerformed"/>
